--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "dependencies": {
         "inquirer": "^8.2.4",
-        "mysql2": "^2.2.5"
+        "mysql2": "^2.2.5",
+        "dotenv": "^8.2.0"
     }
 }
